<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:paddingBottom="16dp" />

            <TextView
                android:id="@+id/totalRowsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/total_rows"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/totalPlantsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/total_plants"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/totalNonMTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/total_non_m"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/totalMTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/total_m"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/nonMValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/non_m_value"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/mValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/m_value"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/totalValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/total_value"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/webPlantsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/web_plants"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/webQtyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/web_qty"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/webValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/web_value"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/ratesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/rates_text"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/usdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/usd"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/eurTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/eur"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/stampTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/stats_stamp"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>