<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Search bar layout -->
    <LinearLayout
        android:id="@+id/searchBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="8dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:autofillHints="username"
            android:inputType="text" />

        <ImageView
            android:id="@+id/clearSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear_search"
            android:src="@drawable/ic_clear"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/qrCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/qr_code_button"
            android:src="@drawable/ic_qr_code"
            android:padding="8dp" />
    </LinearLayout>

    <!-- Search icon to unroll the search bar -->

    <!-- RecyclerView for displaying the list of plants -->
    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="end"
        android:contentDescription="@string/search_icon"
        android:src="@drawable/ic_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plantList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp" />
</LinearLayout>
